deploy/kubernetes/overlays/local/api-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab28-api
  namespace: lab28
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Never
          readinessProbe:
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 1Gi
